# NichesNooksAndCrannies

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.opencode/skills/nyc-location-discovery/: SKILL.md
docs/: quality-score.md
docs/design-docs/: core-beliefs.md  index.md  reddit-scraping-method.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: ai-agent-approach.md  ai-agent-deep-dive.md  master-spec.md  web-scraper-approach.md
docs/references/: index.md  reddit-crawlee-spec.md  reddit-old-reddit-spec.md  reddit-pydoll-spec.md  reddit-scraping-quick-reference.md
src/approaches/ai_agent/: main.py
src/approaches/ai_agent/agents/: __init__.py  discovery.py  enrichment.py  social_proof.py  validation.py
src/approaches/ai_agent/config/: __init__.py  constants.py  prompts.py  settings.py
src/approaches/ai_agent/processors/: __init__.py  orchestrator.py  result_aggregator.py
src/approaches/ai_agent/tools/: __init__.py  analyze_reviews.py  search_reddit.py  search_web.py  validate_location.py
src/approaches/ai_agent/utils/: llm_client.py
src/approaches/hybrid/: main.py  pipeline.py
src/approaches/web_scraper/: __init__.py  main.py
src/approaches/web_scraper/config/: __init__.py  constants.py  settings.py  subreddits.py
src/approaches/web_scraper/processors/: __init__.py  cross_reference.py  deduplicator.py  gem_classifier.py
src/approaches/web_scraper/scrapers/: __init__.py  atlas_obscura.py  google_maps.py  reddit.py  reddit_apify.py  reddit_base.py  reddit_crawlee.py  reddit_json.py  reddit_old.py  reddit_pydoll.py  reddit_scrapling.py
src/approaches/web_scraper/types/: __init__.py  scraper_result.py
src/shared/services/: cache.py  logger.py  rate_limiter.py
src/shared/types/: location.py  output.py  sources.py
src/shared/utils/: deduplication.py  formatting.py  validation.py
starter-agentic-flow-guide/: AGENTS.md  EXAMPLE_ARCHITECTURE.md  EXAMPLE_CORE_BELIEFS.md  EXAMPLE_QUALITY_SCORE.md  GUIDE_TO_AGENT_DRIVEN_REPOS.md  QUICK_START.md
tests/shared/: test_deduplication.py  test_validation.py
tests/web-scraper/: __init__.py  test_atlas_obscura_scraper.py  test_cross_reference.py  test_deduplicator.py  test_gem_classifier.py  test_google_maps_client.py  test_pipeline.py  test_reddit_scraper.py
